@@ -93,7 +93,7 @@ INCLUDE(ManageRelease)
 SET(PRJ_IGNORE_FILES_COMMON
     "/doc/"  "\\\\.spec$" "messages.po$" "\\\\.orig$"
 )
-LIST(APPEND SOURCE_ARCHIVE_IGNORE_FILES ${PRJ_IGNORE_FILES_COMMON} "/bin/" "${KOJI_BUILD_SCRATCH}")
+LIST(APPEND SOURCE_ARCHIVE_IGNORE_FILES ${PRJ_IGNORE_FILES_COMMON} "/bin/" "${KOJI_BUILD_SCRATCH}$")
 
 IF(RPM_BUILD_SOURCES)
     SET(SOURCE_ARCHIVE_DIR ${RPM_BUILD_SOURCES})
