@@ -17,10 +17,10 @@
 #   uninstall_schemas: uninstall schemas
 #
 
-IF(NOT DEFINED _USE_GCONF_CMAKE_)
-    FIND_PROGRAM(GCONFTOOL NAMES gconftool-2 gconftool)
+IF(NOT DEFINED _MANAGE_GCONF_CMAKE_)
+    FIND_PROGRAM(GCONFTOOL_CMD NAMES gconftool-2 gconftool)
 
-    IF(${GCONFTOOL} STREQUAL "GCONFTOOL-NOTFOUND")
+    IF(${GCONFTOOL_CMD} STREQUAL "GCONFTOOL_CMD-NOTFOUND")
 	MESSAGE(FATAL_ERROR "gconftool and gconftool-2 are not found, please install GConf or GConf2.")
     ENDIF()
 
@@ -31,7 +31,11 @@ IF(NOT DEFINED _USE_GCONF_CMAKE_)
     GET_FILENAME_COMPONENT(_gconf_schemas_basename ${GCONF_SCHEMAS_FILE} NAME)
 
     IF (NOT DEFINED GCONF_SCHEMAS_INSTALLED_DIR)
-	SET(GCONF_SCHEMAS_INSTALLED_DIR  "${SYSCONF_INSTALL_DIR}/gconf/schemas")
+	IF(SYSCONF_INSTALL_DIR)
+	    SET(GCONF_SCHEMAS_INSTALLED_DIR  "${SYSCONF_INSTALL_DIR}/gconf/schemas")
+	ELSE(SYSCONF_INSTALL_DIR)
+	    SET(GCONF_SCHEMAS_INSTALLED_DIR  "${SYSCONF_DIR}/gconf/schemas")
+	ENDIF(SYSCONF_INSTALL_DIR)
     ENDIF(NOT DEFINED GCONF_SCHEMAS_INSTALLED_DIR)
 
     IF (NOT DEFINED GCONF_CONFIG_SOURCE)
@@ -42,7 +46,7 @@ IF(NOT DEFINED _USE_GCONF_CMAKE_)
 
     ADD_CUSTOM_TARGET(uninstall_schemas
 	COMMAND GCONF_CONFIG_SOURCE=${GCONF_CONFIG_SOURCE}
-	${GCONFTOOL} --makefile-uninstall-rule
+	${GCONFTOOL_CMD} --makefile-uninstall-rule
 	${GCONF_SCHEMAS_INSTALLED_DIR}/${_gconf_schemas_basename}
 	COMMENT "Uninstalling schemas"
 	)
@@ -50,7 +54,7 @@ IF(NOT DEFINED _USE_GCONF_CMAKE_)
     ADD_CUSTOM_TARGET(install_schemas
 	COMMAND cmake -E copy ${GCONF_SCHEMAS_FILE} ${GCONF_SCHEMAS_INSTALLED_DIR}/${_gconf_schemas_basename}
 	COMMAND GCONF_CONFIG_SOURCE=${GCONF_CONFIG_SOURCE}
-	${GCONFTOOL} --makefile-install-rule
+	${GCONFTOOL_CMD} --makefile-install-rule
 	${GCONF_SCHEMAS_INSTALLED_DIR}/${_gconf_schemas_basename}
 	DEPENDS ${GCONF_SCHEMAS_FILE}
 	COMMENT "Installing schemas"
@@ -58,6 +62,6 @@ IF(NOT DEFINED _USE_GCONF_CMAKE_)
 
     INSTALL(FILES ${GCONF_SCHEMAS_FILE}
 	DESTINATION "${GCONF_SCHEMAS_INSTALLED_DIR}")
-ENDIF(NOT DEFINED _USE_GCONF_CMAKE_)
+ENDIF(NOT DEFINED _MANAGE_GCONF_CMAKE_)
 
 
